add README.md and meta tags

--- a/index.html
+++ b/index.html
@@ -1,8 +1,26 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>my works</title>
+    <meta name="title" content="my works" />
+    <meta name="description" content="interactive display of projects i have done so far" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta http-equiv="content-language" lang="en" />
+    <meta name="keywords" content="personal site, personal website, personal portfolio, portfolio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:url" content="https://sglkc.github.io/portfolio/" />
+    <meta property="og:title" content="my works" />
+    <meta property="og:site_name" content="sglkc.github.io">
+    <meta property="og:description" content="interactive display of projects i have done so far" />
+    <meta property="og:image" content="https://sglkc.github.io/portfolio/assets/thumbnail.png" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://sglkc.github.io/portfolio/" />
+    <meta property="twitter:title" content="my works" />
+    <meta property="twitter:description" content="interactive display of projects i have done so far" />
+    <meta property="twitter:image" content="https://sglkc.github.io/portfolio/assets/thumbnail.png" />
     <link rel="icon" type="image/png" href="assets/favicon.png" />
     <link rel="stylesheet" href="css/minireset.css" />
     <link rel="stylesheet" href="css/style.css" />
